test_regress/t/t_enum_overlap_bad.out
%Error: t/t_enum_overlap_bad.v:12:11: Overlapping enumeration value: 'e1b'
                                    : ... note: In instance 't'
   12 |           e1b=1
      |           ^~~
        t/t_enum_overlap_bad.v:10:11: ... Location of original declaration
   10 |           e1,
      |           ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
